platform/kubernetes/base/postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: shopsphere-data
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: database
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
